--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "soundboard",
   "version": "0.0.0",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
+    "db-migrate": "node node_modules/db-migrate/bin/db-migrate",
+    "electron": "ng build --prod --base-href ./ && electron .",
+    "electron-no-build": "electron .",
+    "electron-rebuild": "$(npm bin)/electron-rebuild",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -19,7 +24,13 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "@types/electron": "^1.6.10",
+    "bootstrap": "^4.3.1",
+    "db-migrate": "^0.11.6",
+    "db-migrate-sqlite3": "^0.4.0",
     "rxjs": "~6.4.0",
+    "sqlite3": "^4.1.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -28,10 +39,12 @@
     "@angular/cli": "~8.0.0",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "electron": "^6.0.7",
+    "electron-rebuild": "^1.8.6",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
