--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^4.3.1",
     "db-migrate": "^0.11.6",
     "db-migrate-sqlite3": "^0.4.0",
+    "ng-drag-drop": "^5.0.0",
     "rxjs": "~6.4.0",
     "sqlite3": "^4.1.0",
     "tslib": "^1.9.0",
