--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "soundboard",
+  "name": "soundboard-backend",
   "version": "0.0.0",
   "main": "main.js",
   "scripts": {
     "ng": "ng",
-    "db-migrate": "node node_modules/db-migrate/bin/db-migrate",
-    "electron": "ng build --prod --base-href ./ && electron .",
-    "electron-no-build": "electron .",
-    "electron-rebuild": "$(npm bin)/electron-rebuild",
+    "migrate": "node-pg-migrate",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -25,13 +22,13 @@
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
-    "@types/electron": "^1.6.10",
-    "bootstrap": "^4.3.1",
+    "aws-sdk": "^2.581.0",
+    "bootstrap": "^4.4.1",
     "db-migrate": "^0.11.6",
-    "db-migrate-sqlite3": "^0.4.0",
     "ng-drag-drop": "^5.0.0",
+    "node-pg-migrate": "^3.23.3",
+    "pg": "^7.14.0",
     "rxjs": "~6.4.0",
-    "sqlite3": "^4.1.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -44,8 +41,6 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
-    "electron": "^6.0.7",
-    "electron-rebuild": "^1.8.6",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -57,5 +52,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
-  }
+  },
+  "repository": "https://github.com/dansilcox/electron-soundboard.git",
+  "author": "Dan Silcox",
+  "license": "MIT"
 }
